--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -2,8 +2,23 @@
     display: flex;
     border-bottom: 1px solid lightgrey;
     margin-right: 5px;
+    padding: 10px;
+}
+
+.product img{
+    margin-right: 15px;
 }
 
 .product-name{
     color: blue;
+    font-weight: 450;
+}
+
+.btn-regular{
+    background-color: goldenrod;
+    width: 150px;
+    height: 30px;
+    border:1px solid gray;
+    border-radius: 5px;
+    cursor: pointer;
 }
