--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -8,3 +8,14 @@
     margin-right: 5px;
     margin-left: 50px;
 }
+
+.search-container{
+    background-color: rgba(0, 0, 0, .85);
+    text-align: center;
+    line-height: 50px;
+}
+
+.search-container input{
+    width: 75%;
+    height: 35px;
+}
